# iontrap-dynamics

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CITATION.cff  CONVENTIONS.md  LICENCE  LICENCE-MIT  README.md  WORKPLAN_v0.3.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  docs-deploy.yml
archive/: README.md
assets/: LICENCE  SOURCE.md
benchmarks/data/01_single_ion_sideband_flopping/: arrays.npz  demo_report.json  manifest.json  metadata.json
benchmarks/data/bell_entanglement_demo/: arrays.npz  demo_report.json  entanglement.npz
benchmarks/data/bernoulli_readout_demo/: demo_report.json  manifest.json  measurement.npz
benchmarks/data/binomial_readout_demo/: arrays.npz  demo_report.json  manifest.json  measurement.npz
benchmarks/data/carrier_rabi_demo/: analytic_overlay.npz  arrays.npz  demo_report.json  manifest.json  metadata.json
benchmarks/data/detected_readout_demo/: demo_report.json  manifest.json  measurement.npz
benchmarks/data/detuning_jitter_demo/: arrays.npz  demo_report.json
benchmarks/data/ensemble_parallel/: report.json
benchmarks/data/gaussian_pi_pulse_demo/: analytic_overlay.npz  arrays.npz  demo_report.json  manifest.json  metadata.json
benchmarks/data/jax_timedep/: report.json
benchmarks/data/ms_gate_bell_demo/: arrays.npz  demo_report.json  manifest.json  metadata.json
benchmarks/data/parity_scan_demo/: arrays.npz  demo_report.json  manifest.json  measurement.npz
benchmarks/data/poisson_readout_demo/: demo_report.json  manifest.json  measurement.npz
benchmarks/data/rabi_drift_scan_demo/: arrays.npz  demo_report.json
benchmarks/data/rabi_jitter_demo/: arrays.npz  demo_report.json
benchmarks/data/sesolve_speedup/: report.json
benchmarks/data/sideband_inference_demo/: arrays.npz  bsb_arrays.npz  demo_report.json  manifest.json  measurement.npz
benchmarks/data/spam_prep_demo/: arrays.npz  demo_report.json
benchmarks/data/sparse_vs_dense/: report.json
benchmarks/data/spectrum_envelope/: envelope_table.json  report.json  report_jax.json
benchmarks/data/spin_readout_demo/: demo_report.json  manifest.json  measurement.npz
benchmarks/data/wilson_ci_demo/: arrays.npz  demo_report.json  manifest.json  measurement.npz
docs/: LICENCE  benchmarks.md  boundary-decision-tree.md  conventions.md  framework.md  getting-started.md  gpu-dispatch-design.md  index.md  overview.md  phase-1-architecture.md  phase-2-jax-backend-design.md  phase-2-jax-time-dep-design.md  workplan-clos-2016-integration.md
docs/tutorials/: 01_first_rabi_readout.md  02_red_sideband_fock1.md  03_gaussian_pi_pulse.md  04_ms_gate_bell.md  05_custom_observables.md  06_fock_truncation.md  07_cache_round_trip.md  08_full_lamb_dicke.md  09_squeezed_coherent_prep.md  10_finite_shot_statistics.md  11_jitter_ensembles.md  12_bell_entanglement.md  13_reproducing_clos_2016.md  index.md
examples/: README.md
legacy/: qc.py
legacy/clos 2016 prl/: 1ions_ipr_vs_nc.txt  2ions_ipr_vs_nc.txt  3ions_ipr_vs_nc.txt  4ions_ipr_vs_nc.txt  5ions_ipr_vs_nc.txt  Emergence of statistical physics in a trapped ion.pptx  INVENTORY.md  ergodic_2015_03_15.m  ergodic_band_matrix_2015_05_07.m  ergodic_inf_cutoff_2015_04_21.m  sbevol_2015_01.m
legacy/clos 2016 prl/DP num res_fig_4_2015_07_04/: SummaryDeffVsDetAllIons.csv  SummaryDeffVsDetAllIons.txt
legacy/clos 2016 prl/GC collection/matlabscripts/: N1Ax10nval5.mat  N1Ax11nval05integrals.mat  N1Ax13nval05integrals.mat  N1Ax15nval05integrals.mat  N1Ax17nval05integrals.mat  N1Ax19nval05integrals.mat  N1Ax1nval05integrals.mat  N1Ax3nval05integrals.mat  N1Ax5nval05integrals.mat  N1Ax5nval5.mat  N1Ax7nval05integrals.mat  N1Ax9nval05integrals.mat  N2Ax10nval05.mat  N2Ax10nval05matlab.mat  N2Ax10nval5.mat  N2Ax11nval05integrals.mat  N2Ax12nval05.mat  N2Ax13nval05integrals.mat  (+92 more)
src/iontrap_dynamics/: __init__.py  analytic.py  cache.py  clos2016.py  clos2016_references.py  conventions.py  drives.py  entanglement.py  exceptions.py  hamiltonians.py  hilbert.py  invariants.py  modes.py  observables.py  operators.py  results.py  sequences.py  species.py  spectrum.py  spectrum_observables.py  states.py  system.py
src/iontrap_dynamics/backends/: __init__.py
src/iontrap_dynamics/measurement/: __init__.py  channels.py  detectors.py  protocols.py  statistics.py
src/iontrap_dynamics/systematics/: __init__.py  drift.py  jitter.py  spam.py
tests/benchmarks/: test_performance_smoke.py
tests/conventions/: test_operators.py  test_static_conventions.py
tests/regression/analytic/: test_analytic.py
tests/regression/invariants/: test_invariants.py
tests/regression/migration/: test_migration_references.py
tests/regression/reproduction/: test_clos2016_references.py  test_clos_2016_N1.py  test_clos_2016_N2_N3.py
tests/unit/: test_backends_jax.py  test_backends_jax_dynamiqs.py  test_cache.py  test_clos2016.py  test_drives.py  test_entanglement.py  test_hamiltonians.py  test_hilbert.py  test_measurement.py  test_modes.py  test_observables.py  test_protocols.py  test_results_schema.py  test_sequences.py  test_species.py  test_spectrum.py  test_spectrum_observables.py  test_states.py  test_statistics.py  test_system.py  test_systematics.py
tools/: check_spdx.py  fetch_assets.sh  generate_migration_references.py  generate_overview_figures.py  hash_assets.sh  pa11y.config.json  plot_spectrum_envelope_backend_comparison.py  plot_spectrum_envelope_extrapolation.py  run_benchmark_ensemble_parallel.py  run_benchmark_jax_timedep.py  run_benchmark_sesolve_speedup.py  run_benchmark_sideband.py  run_benchmark_sparse_vs_dense.py  run_benchmark_spectrum_envelope.py  run_benchmark_spectrum_envelope_jax.py  run_demo_bell_entanglement.py  run_demo_bernoulli_readout.py  run_demo_binomial_readout.py  run_demo_carrier.py  run_demo_detected_readout.py  run_demo_detuning_jitter.py  run_demo_gaussian_pulse.py  run_demo_ms_gate.py  run_demo_parity_scan.py  run_demo_poisson_readout.py  run_demo_rabi_drift_scan.py  run_demo_rabi_jitter.py  run_demo_sideband_inference.py  run_demo_spam_prep.py  run_demo_spin_readout.py  run_demo_wilson_ci.py
(+13 files in other folders)
